# alt-core-playground

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  report.py
.github/ISSUE_TEMPLATE/: task.md  task.yml
.github/PULL_REQUEST_TEMPLATE/: new_algo.md
.github/workflows/: lint.yml  report.yml  smoke-test.yml  test.yml
ISSUE_TEMPLATE/: task.md
PULL_REQUEST_TEMPLATE/: new_algo.md
ken_kg_1/: run_graph.py
ken_kg_1/graphs/: permute_knowledge_graph.py
ken_kg_1/prompts/: create_sys_prompts.py
ken_kg_1/utils/: get_paper_text.py
papers/10.1016:j.cognition.2020.104244/: 10.1016:j.cognition.2020.104244.json  gen_ken_c137_algo1_gpt-4o-2024-08-06.json  gen_ken_c137_algo1_openai-gpt-4o-2024-08-06.json  original_paper.txt
papers/j1234/: eval_ken_c132_gen_ken_c137_algo1_alt1.json  eval_ken_c132_gen_ken_c137_algo1_alt1.json.json  gen_ken_c137_algo1_alt1.json  original_paper.txt
src/evaluators/: __init__.py  main.py
src/evaluators/ken_c132/: __init__.py  runner.py
src/generators/: __init__.py  main.py
src/generators/ken_c137/: __init__.py  api_call.py  kg_pipeline.py  runner.py
src/generators/ken_c137/graphs/: permute_knowledge_graph.py
src/generators/ken_c137/prompts/: create_sys_prompts.py  create_user_prompts.py  response_models.py
src/llm/: caller.py
src/logger/: __init__.py
tests/: test_example.py
