[project]
name = "alt-core"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "litellm==1.61.11",
    "python-dotenv==1.0.1",
    "numpy==2.2.3",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "ruff==0.9.5",
    "mypy==1.15.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]
docs = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "."]
extend-exclude = ["tests/*"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    "PTH", # use pathlib instead of os.path
    "D",  # pydocstyle
    "UP", # pyupgrade
    "ANN", # flake8-annotations
]
# D203: Conflicts with D211 (no-blank-line-before-class). We prefer no blank line before class docstring
# D212: Conflicts with D213 (multi-line-summary-second-line). We follow Google style which allows summary on first line
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]